gitops/apps/hello-teste/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-teste
  labels:
    app.kubernetes.io/name: hello-teste
spec:
  selector:
    app.kubernetes.io/name: hello-teste
  ports:
    - name: http
      port: 80
      targetPort: http
